fix(web): Logic Map - expand/collapse button hidden behind func title

--- a/web/src/components/LogicMap.css
+++ b/web/src/components/LogicMap.css
@@ -43,6 +43,7 @@
 }
 .logic-map-main .func-decl button.expand-collapse {
   position: absolute;
+  z-index: 1;
   top: 0px;
   right: 0px;
 }
